--- a/secrets.php.template
+++ b/secrets.php.template
@@ -1,5 +1,6 @@
 <?php
-define ($SERVER_API_KEY, "");
-define ($USER_API_KEY, "");
+define ('SITE', '');
+define ('SERVER_API_KEY', '');
+define ('USER_API_KEY', '');
 ?>
 
